Fix missing padding on line span when colors are grouped by file

--- a/styles/pigments.less
+++ b/styles/pigments.less
@@ -247,14 +247,11 @@ pigments-palette {
   [data-variable-id] {
     cursor: alias;
     pointer-events: auto;
+    padding-left: 1em;
     display: inline-block;
   }
   [data-variable-id] * {
     pointer-events: none;
-  }
-
-  .path {
-    padding-left: 1em;
   }
 
   .path, .line {
